# turan-intern-log-parser

./: LICENSE  Makefile  main.py  pyproject.toml
app/settings/: settings.py
docker/: Dockerfile  docker-compose.yml
