[tool.poetry]
name = "dck test"
version = "0.1.0"
description = ""
authors = ["w1tnessbtwwwww <work.w1tnessbtw@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic-settings = "^2.7.0"
pytelegrambotapi = "^4.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
